--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
+    "concurrently": "^7.3.0",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
