--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "serve:api": "nx run api:serve",
+    "serve:web": "ng serve --open",
+    "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:web\"",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
