--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngrx/effects": "10.0.0",
+    "@ngrx/entity": "10.0.0",
+    "@ngrx/router-store": "10.0.0",
     "@ngrx/store": "^10.0.1",
     "@nrwl/angular": "10.3.2",
     "json-serve": "^0.1.0",
@@ -64,6 +67,8 @@
     "@angular/language-service": "^10.1.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@ngrx/schematics": "10.0.0",
+    "@ngrx/store-devtools": "10.0.0",
     "@nrwl/cli": "10.3.2",
     "@nrwl/cypress": "10.3.2",
     "@nrwl/jest": "10.3.2",
